web-infras/parser/tests/fixtures/babel/core/uncategorised/524/output.txt
[SyntaxError]: Illegal newline after throw. (2,1)
2|10;
 |^
